fix PromptInput scrollbar

--- a/src/assets/styles/pages/_chat-interface.scss
+++ b/src/assets/styles/pages/_chat-interface.scss
@@ -457,7 +457,6 @@
   width: 100%;
 
   textarea {
-    max-height: 30vh;
     font-size: 0.9rem;
     line-height: 1.25rem;
     border-radius: 8px;
@@ -467,7 +466,6 @@
       var(--query-editor-bg)
     );
     border-color: transparent;
-    overflow: auto;
   }
 
   .actions {
